diss: switch to biblatex

--- a/diss.tex
+++ b/diss.tex
@@ -74,9 +74,12 @@
 
   %\include{bibliographie}
   %\addcontentsline{toc}{chapter}{\protect Bibliography}
-  \bibliographystyle{plainnat}
-  \bibliography{bib/eigene,bib/itip-refs,bib/other-refs}
-  \markboth{Bibliography}{Bibliography}
+
+  %\bibliographystyle{plainnat}
+  %\bibliography{bib/eigene,bib/itip-refs,bib/other-refs}
+  %\markboth{Bibliography}{Bibliography}
+  
+  \printbibliography
 
  % \include{danksagung}
 
