--- a/head.tex
+++ b/head.tex
@@ -9,9 +9,14 @@
 \usepackage{graphicx}
 \usepackage[ngerman, english]{babel}
 \usepackage{url}
-\usepackage{natbib}
-\usepackage[nottoc,numbib]{tocbibind}
+%\usepackage{natbib}
+%\usepackage[nottoc,numbib]{tocbibind}
 \usepackage{paralist}
+
+\usepackage[backend=bibtex,style=authoryear,dashed=false]{biblatex}
+\addbibresource{bib/eigene.bib}
+\addbibresource{bib/itip-refs.bib}
+\addbibresource{bib/other-refs.bib}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
